# engg199-03

data/: segimage1-cc.mha  segimage1.mha  segimage2.mha
src/: CMakeLists.txt  main.cxx  ui.h
